macro-template/tests/ui/splice_block_row_varying_outer_placeholder.rs
use macro_template::template;

fn main() {
    template! {
        for (Name, Variant) in [
            (FirstEnum, First),
            (SecondEnum, Second),
        ] {
            enum Name {
                @splice { Variant, }
            }
        }
    }
}
